# baratito_backend

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  pgadmin_server.json  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: prod.yml
alembic/: env.py
alembic/versions/: 091e41f5f089_added_photo_to_product.py  0bba8953a559_add_product_category_constraint.py  104837aaa066_add_cascade.py  1125a340929e_added_purchase_overview_polyline_column.py  13193df545e3_added_fields.py  195f6cbef364_added_purchase_estimated_price_column.py  1c0615a03e8b_added_user_table.py  30dc864bba2d_added_product_price_table.py  495db5ed8b81_add_cascade.py  4b5fef299b0b_change_field_name.py  511d26466776_added_list_table.py  5531abd3ab44_add_tables.py  628a054dfe97_add_category_table.py  73db8d0e715a_add_establishment_table.py  8b18ed6f14ee_create_product_table.py  9a859ecddc24_added_user_location_table.py  a1ea0f7524ba_added_order_table.py  a20c488a5978_default_srid.py  a4392f55d358_added_fields.py  ac2e8624658c_added_purchase_and_purchase_list_item.py  cbe2acc6e667_added_uuid_field_to_list_item.py  ce050627b9b6_added_list_item_table.py  d94fc87b96fa_add_productcategory_table.py  e98e27a4aaf4_added_table_notification.py
app/: main.py  middleware.py
app/.devcontainer/: devcontainer.json
app/auth/di/: containers.py
app/auth/domain/: user.py
app/auth/persistence/: models.py  user_repository.py
app/auth/presentation/: routes.py  schemas.py  utils.py
app/common/: routes.py  settings.py
(+115 files in other folders)
